Create the cards with the info put on backoffice.html

--- a/html/details.html
+++ b/html/details.html
@@ -30,7 +30,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="../html/homepage.html"
                 >Home</a
@@ -54,7 +54,7 @@
     </nav>
     <header class="text-center my-5">
       <h1>SNEAKERS</h1>
-      <h2>Compra qui le tue scarpe preferite</h2>
+      <h2>Benvenuto nei dettagli della scarpa selezionata</h2>
     </header>
     <main>
       <section>
@@ -72,6 +72,6 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
-    <script src="../scripts/homepage.js"></script>
+    <script src="../scripts/details.js"></script>
   </body>
 </html>
