--- a/html/details.html
+++ b/html/details.html
@@ -62,7 +62,25 @@
           <div
             class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-2"
             id="row"
-          ></div>
+          >
+            <div class="card">
+              <img src="..." class="card-img-top" alt="Sneaker" />
+              <div class="card-body">
+                <h3 class="card-title" id="name"></h3>
+                <h5 class="card-text" id="brand"></h5>
+                <p class="card-text" id="description"></p>
+                <p class="card-text" id="price"></p>
+                <div>
+                  <button onclick="editSneaker()" class="btn btn-warning">
+                    MODIFICA
+                  </button>
+                  <button onclick="deleteSneaker()" class="btn btn-danger">
+                    ELIMINA
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
