--- a/html/backoffice.html
+++ b/html/backoffice.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="vh100 d-flex flex-column">
+  <body class="d-flex flex-column vh-100 bg-light text-dark">
     <nav class="navbar navbar-expand-md bg-primary" data-bs-theme="dark">
       <div class="container-fluid">
         <button
@@ -56,9 +56,12 @@
     </nav>
     <header class="text-center my-5">
       <h1>SNEAKERS E-COMMERCE</h1>
-      <h3>Benvenuti nell'area di amministrazione</br>qui puoi creare le tue sneakers con tutti i dati</h3>
+      <h3>
+        Benvenuti nell'area di amministrazione<br />qui puoi creare le tue
+        sneakers con tutti i dati
+      </h3>
     </header>
-    <main>
+    <main class="flex-grow-1">
       <div class="container">
         <div class="row justify-content-center my-5">
           <div class="col col-12 col-md-6">
@@ -96,13 +99,45 @@
                 <label for="quantity" class="form-label">Prezzo Sneaker</label>
                 <input type="number" class="form-control" id="price" required />
               </div>
-              <button type="submit" class="btn btn-success">SALVA</button>
+              <button type="submit" class="btn btn-success">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-floppy2"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M1.5 0h11.586a1.5 1.5 0 0 1 1.06.44l1.415 1.414A1.5 1.5 0 0 1 16 2.914V14.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 14.5v-13A1.5 1.5 0 0 1 1.5 0M1 1.5v13a.5.5 0 0 0 .5.5H2v-4.5A1.5 1.5 0 0 1 3.5 9h9a1.5 1.5 0 0 1 1.5 1.5V15h.5a.5.5 0 0 0 .5-.5V2.914a.5.5 0 0 0-.146-.353l-1.415-1.415A.5.5 0 0 0 13.086 1H13v3.5A1.5 1.5 0 0 1 11.5 6h-7A1.5 1.5 0 0 1 3 4.5V1H1.5a.5.5 0 0 0-.5.5m9.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z"
+                  />
+                </svg>
+              </button>
+              <button type="submit" onclick="reset()" class="btn btn-danger">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-trash3-fill"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"
+                  />
+                </svg>
+              </button>
             </form>
           </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © <span id="year"></span> Copyright:
+        <a class="text-dark" href="#">Kevin Ramil</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
