--- a/html/details.html
+++ b/html/details.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="vh100 d-flex flex-column">
+  <body class="vh100 d-flex flex-column bg-light text-dark">
     <nav class="navbar navbar-expand-md bg-primary" data-bs-theme="dark">
       <div class="container-fluid">
         <button
@@ -63,22 +63,42 @@
             class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center g-2"
             id="row"
           >
-            <div class="card">
+            <div class="card mb-5">
               <img src="" class="card-img-top" alt="Sneaker" />
               <div class="card-body">
                 <h3 class="card-title" id="name"></h3>
                 <h5 class="card-text" id="brand"></h5>
                 <p class="card-text" id="description"></p>
                 <p class="card-text" id="price"></p>
-                <div class="d-flex">
-                  <button onclick="editSneaker()" class="btn btn-warning">
-                    MODIFICA
-                  </button>
+                <div class="d-flex justify-content-around">
                   <button onclick="deleteSneaker()" class="btn btn-danger">
-                    ELIMINA
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-trash3-fill"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5"
+                      />
+                    </svg>
                   </button>
                   <button onclick="backHomeSneaker()" class="btn btn-success">
-                    TORNA INDIETRO
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="currentColor"
+                      class="bi bi-arrow-return-left"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M14.5 1.5a.5.5 0 0 1 .5.5v4.8a2.5 2.5 0 0 1-2.5 2.5H2.707l3.347 3.346a.5.5 0 0 1-.708.708l-4.2-4.2a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 8.3H12.5A1.5 1.5 0 0 0 14 6.8V2a.5.5 0 0 1 .5-.5"
+                      />
+                    </svg>
                   </button>
                 </div>
               </div>
@@ -87,7 +107,12 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © <span id="year"></span> Copyright:
+        <a class="text-dark" href="#">Kevin Ramil</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
