--- a/html/homepage.html
+++ b/html/homepage.html
@@ -10,9 +10,34 @@
       integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
       crossorigin="anonymous"
     />
+    <style>
+      .card-img-top {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 200px;
+        width: 100%;
+        object-fit: contain;
+      }
+      .card {
+        height: 100%;
+        min-height: 420px;
+        display: flex;
+        flex-direction: column;
+      }
+      .card-body {
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+      }
+    </style>
   </head>
-  <body class="vh100 d-flex flex-column">
-    <nav class="navbar navbar-expand-md bg-primary" data-bs-theme="dark">
+  <body class="vh100 d-flex flex-column bg-light text-dark">
+    <nav
+      class="navbar navbar-expand-md bg-primary sticky-top"
+      data-bs-theme="dark"
+    >
       <div class="container-fluid">
         <button
           class="navbar-toggler"
@@ -56,17 +81,22 @@
       <h1>SNEAKERS</h1>
       <h2>Compra qui le tue scarpe preferite</h2>
     </header>
-    <main>
+    <main class="flex-grow-1">
       <section>
-        <div class="container">
+        <div class="container mb-5">
           <div
-            class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-center g-5"
+            class="row row-cols-1 row-cols-md-3 row-cols-lg-4 justify-content-center g-2"
             id="row"
           ></div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="bg-light text-center text-lg-start">
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+        © <span id="year"></span> Copyright:
+        <a class="text-dark" href="#">Kevin Ramil</a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
