--- a/html/homepage.html
+++ b/html/homepage.html
@@ -12,16 +12,12 @@
     />
     <style>
       .card-img-top {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        height: 200px;
+        height: 250px;
+        object-fit: cover;
         width: 100%;
-        object-fit: contain;
       }
       .card {
         height: 100%;
-        min-height: 420px;
         display: flex;
         flex-direction: column;
       }
@@ -29,7 +25,7 @@
         flex: 1 1 auto;
         display: flex;
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: space-between;
       }
     </style>
   </head>
